# pymyami

./: .gitignore  README.md  makefile  requirements.txt  setup.cfg  setup.py  zeebe_2019.ipynb
.github/workflows/: test-myami.yml  test-myami_v1.yml
background/: Pierrot_2018_Interaction_Model.xlsm  README.txt
myami/: __init__.py  approx.py  beta_C.py  direct.py  helpers.py  params.py  pitzer.py
myami/parameters/: TabA1.csv  TabA10.csv  TabA11.csv  TabA12.csv  TabA3.csv  TabA4.csv  TabA5.csv  TabA7.csv  TabA8.csv  TabA9.csv  gen_params.py  pitzer_params.json
pymyami/: __init__.py  approx.py  approximate.py  beta_C.py  calculate.py  direct.py  helpers.py  params.py  pitzer.py
pymyami/parameters/: Fcorr_approx.json  Tab2.csv  TabA1.csv  TabA12.csv  TabA3.csv  TabA5.csv  TabA6.csv  TabA7.csv  TabA8.csv  TabA9.csv  TabSpecial.csv  Zeebe2019.csv  gen_approx_coefs.py  gen_params.py  standard_seawater.csv
test/: test_MyAMI_crosscheck.py  test_approximation.py  test_general.py
test/data/: Millero1998_TableIII.csv
