[metadata]
name = MyAMI
version = attr: myami.VERSION
author = Oscar Branson
author_email = ob266@cam.ac.uk
description = MyAMI specific ion interaction model for calculating stoichiometric equilibrium constants in modified seawater.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PalaeoCarb/MyAMI
project_urls =
    PalaeoCarb Project = https://github.com/PalaeoCarb
classifiers =
    Programming Language :: Python :: 3